Attempted fix #1 - Fonts look horrible on Safari

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,12 +5,12 @@
 
 @font-face {
 	font-family: 'Poppins';
-	src: url('../fonts/Poppins-Medium.ttf');
+	src: url('../fonts/Poppins-Medium.ttf') format('truetype');
 }
 
 @font-face {
 	font-family: 'Open Sans';
-	src: url('../fonts/OpenSans-Var.ttf');
+	src: url('../fonts/OpenSans-Var.ttf') format('truetype');
 }
 
 /*
@@ -20,14 +20,14 @@
 
 @font-face {
 	font-family: 'Roboto';
-	src: url('../fonts/Roboto-Medium.ttf');
+	src: url('../fonts/Roboto-Medium.ttf') format('truetype');
 
 	font-weight: normal;
 }
 
 @font-face {
 	font-family: 'Roboto';
-	src: url('../fonts/Roboto-Light.ttf');
+	src: url('../fonts/Roboto-Light.ttf') format('truetype');
 
 	font-weight: lighter;
 }
